syntax = "proto3";

package channel.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/distribution/transport/grpc/channel/v1";

service ChannelCreateService {
    rpc Exec(CreateMessage) returns (CreateMessage) {}
}

service ChannelDeleteService {
    rpc Exec(DeleteRequest) returns (google.protobuf.Empty) {}
}

service ChannelRenameService {
    rpc Exec(RenameRequest) returns (google.protobuf.Empty) {}
}

message CreateOptions {
    bool retrieve_if_name_exists = 1;
    bool overwrite_if_name_exists = 2;
}

message CreateMessage {
    repeated Channel channels = 1;
    CreateOptions opts = 2;
}

message DeleteRequest {
    repeated uint32 keys = 3;
}

message RenameRequest {
    repeated uint32 keys = 1;
    repeated string names = 2;
}

message Channel {
    string name = 1;
    int32 leaseholder = 2;
    string data_type = 3;
    bool is_index = 4;
    double rate = 5;
    uint32 local_key = 6;
    int32 local_index = 7;
    bool virtual = 8;
    uint32 concurrency = 9;
    bool internal = 10;
}
